# pip_package_demo

./: .gitignore  .gitmodules  MANIFEST.in  README.md  dev_reqs.txt  requirements.txt  setup.cfg
bin64/: README.md
bin64/minilib/: __init__.py
config/: MasterConfig.cfg  params.cfg
data/: mytable_other.csv
doc/source/: conf.py  index.rst  installation.rst  module_doc.rst  release_notes.rst
masterinput/: MasterInput.cfg
masterinput/data/: extraTable.csv
pmdemo/: __init__.py  __main__.py  evaluator.py  my_mod.py  mydata.txt  utils.py
src/daniels_package/: daniels_module.py
test/: test_daniels_module.py
tests/: myres.csv  mytable.csv  simple_test.py  test_daniels_module.py  test_my_module.py
